--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,4 +30,5 @@
 @import "./modules/nosotros.scss";
 @import "./modules/servicios.scss";
 @import "./modules/card-nuestros-servicios.scss";
+@import "./modules/card-with-numbers.scss";
 @import "./modules/footer.scss";
