add seguridad electronica page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@
 @import "./modules/contacto.scss";
 @import "./modules/nosotros.scss";
 @import "./modules/servicios.scss";
+@import "./modules/servicio.scss";
 @import "./modules/card-nuestros-servicios.scss";
 @import "./modules/card-with-numbers.scss";
 @import "./modules/footer.scss";
