--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11706,6 +11706,8 @@ form .form-select {
 .nuestros-servicios-seguridad-privada .card-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 2rem;
   margin-top: 4rem;
   padding: 0 2rem;
@@ -11774,10 +11776,50 @@ form .form-select {
   }
 }
 
+.servicio .secondary-title::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 25%;
+  margin: 1rem 0;
+  background-color: #216b9f;
+}
+.servicio h3, .servicio .h3 {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 2rem 0;
+}
+.servicio__item {
+  margin: 4rem auto;
+  width: 70%;
+}
+.servicio__item h1, .servicio__item .h1 {
+  font-weight: 600;
+  text-align: center;
+}
+.servicio__item h1::after, .servicio__item .h1::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 25%;
+  margin: 1rem 0;
+  background-color: #216b9f;
+}
+.servicio__item h1::after, .servicio__item .h1::after {
+  margin: 2rem auto;
+}
+.servicio__text {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.servicio .accordion-button {
+  font-weight: 600;
+}
+
 .card-nuestros-servicios {
   border-radius: 1rem;
   box-shadow: 0px 2px 18px rgba(0, 0, 0, 0.4);
-  flex: 1 1 33%;
+  width: 250px;
   overflow: hidden;
 }
 .card-nuestros-servicios.seguridad-fisica .title-wrapper, .card-nuestros-servicios.seguridad-electronica .title-wrapper, .card-nuestros-servicios.adicionales-electronica .title-wrapper {
