--- a/src/scss/modules/card-nuestros-servicios.scss
+++ b/src/scss/modules/card-nuestros-servicios.scss
@@ -3,7 +3,8 @@
 
     box-shadow: 0px 2px 18px rgba($black, 0.4);
 
-    flex: 1 1 33%;
+    width: 250px;
+    // flex: 1 1 33%;
 
     overflow: hidden;
 
