--- a/src/scss/modules/servicios.scss
+++ b/src/scss/modules/servicios.scss
@@ -24,6 +24,8 @@
         display: flex;
 
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         gap: 2rem;
 
