add seguridad electronica page

--- a/src/scss/modules/servicio.scss
+++ b/src/scss/modules/servicio.scss
@@ -13,7 +13,9 @@
     &__item {
         margin: 4rem auto;
 
-        width: 70%;
+        @include media-breakpoint-up(md) {
+            width: 70%;
+        }
 
         h1 {
             font-weight: 600;
@@ -36,5 +38,35 @@
 
     .accordion-button {
         font-weight: 600;
+    }
+
+    &__carousel-section {
+        h2 {
+            text-align: center;
+
+            @include title-decoration;
+
+            &::after {
+                margin: 2rem auto;
+            }
+        }
+
+        .text {
+            text-align: center;
+
+            @include media-breakpoint-up(md) {
+                width: 50%;
+
+                margin: 0 auto;
+            }
+        }
+
+        .image {
+            img {
+                display: block;
+
+                width: 100%;
+            }
+        }
     }
 }
