--- a/src/scss/modules/form.scss
+++ b/src/scss/modules/form.scss
@@ -1,25 +1,25 @@
 form {
-  width: 90%;
+    width: 90%;
 
-  box-shadow: 0px 2px 18px rgba($black, 0.4);
+    box-shadow: 0px 2px 18px rgba($black, 0.4);
 
-  border-radius: 1rem;
+    border-radius: 1rem;
 
-  padding: 2rem;
-  margin: 4rem auto 2rem auto !important;
+    padding: 2rem;
+    margin: 4rem auto 2rem auto !important;
 
-  .form-label {
-    font-weight: 700;
+    .form-label {
+        font-weight: 700;
 
-    .required {
-      color: red;
+        .required {
+            color: red;
+        }
     }
-  }
 
-  .form-control,
-  .form-select {
-    background-color: rgba($gray, 0.1);
+    .form-control,
+    .form-select {
+        background-color: rgba($gray, 0.1);
 
-    border: none;
-  }
+        // border: none;
+    }
 }
