--- a/src/views/rrhh.twig
+++ b/src/views/rrhh.twig
@@ -20,10 +20,10 @@
       <p>{{ text }}</p>
     {% endfor %}
 
-    <form class="row g-3">
+    <form class="row g-3" id="rrhhForm">
       <div class="col-md-6">
         <label for="inputNombreApellido" class="form-label">Nombre y Apellido <span class="required">*</span></label>
-        <input type="text" class="form-control" id="inputNombreApellido" placeholder="Ej: Quique Necochea">
+        <input type="text" class="form-control" id="inputNombreApellido" placeholder="Ej: Esteban Lopez">
       </div>
       {# <div class="col-md-6">
         <label for="inputCompania" class="form-label">Compañia</label>
@@ -31,7 +31,7 @@
       </div> #}
       <div class="col-md-6">
         <label for="inputEmail" class="form-label">Email <span class="required">*</span></label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="quiquenecochea_ok@gmail.com">
+        <input type="email" class="form-control" id="inputEmail" placeholder="esteban.lopez@gmail.com">
       </div>
       <div class="col-12">
         <label for="inputTelefono" class="form-label">Teléfono <span class="required">*</span></label>
@@ -45,8 +45,10 @@
         <label for="inputCotizacion" class="form-label">Como nos conociste</label>
         <select class="form-select" id="inputCotizacion">
           {# <option selected>Cotización</option> #}
-          <option value="Opcion 1">Opción 1</option>
-          <option value="Opcion 2">Opción 2</option>
+          <option value="internet">Internet</option>
+          <option value="recomendado">Recomendado</option>
+          <option value="publicidad">Publicidad</option>
+          <option value="otro">Otro</option>
         </select>
       </div>
       {# <div class="col-12">
