--- a/src/views/rrhh.twig
+++ b/src/views/rrhh.twig
@@ -20,7 +20,7 @@
       <p>{{ text }}</p>
     {% endfor %}
 
-    <form class="row g-3" id="rrhhForm">
+    <form class="row g-3" id="rrhhForm" enctype="multipart/form-data">
       <div class="col-md-6">
         <label for="inputNombreApellido" class="form-label">Nombre y Apellido <span class="required">*</span></label>
         <input type="text" class="form-control" id="inputNombreApellido" placeholder="Ej: Esteban Lopez">
