data change in home

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -30,7 +30,7 @@
               <img src="/images/icon-chat.svg" alt="">
             </div>
 
-            <p>Damos respuesta inmediata ante cualquier circunstancia.</p>
+            <p>Trato personalizado con nuestros clientes en todo momento.</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -39,7 +39,7 @@
               <img src="/images/icon-people.svg" alt="">
             </div>
 
-            <p>Somos una comunidad. Autoridades siempre disponibles.</p>
+            <p>Damos respuesta inmediata antes cualquier eventualidad.</p>
           </div>
         </div>
       </div>
