--- a/src/scss/modules/hero.scss
+++ b/src/scss/modules/hero.scss
@@ -1,47 +1,56 @@
 .hero {
-  position: relative;
-  width: 100vw;
+    position: relative;
+    width: 100vw;
 
-  margin-top: 9rem;
+    margin-top: 9rem;
 
-  img {
-    width: 100%;
-    object-fit: cover;
+    img {
+        width: 100%;
+        object-fit: cover;
 
-    @include media-breakpoint-up(lg) {
-      height: calc(100vh - 9rem);
+        @include media-breakpoint-up(lg) {
+            height: calc(100vh - 9rem);
+        }
     }
-  }
 
-  .title-cta-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    .title-cta-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .title-cta-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    @include media-breakpoint-up(md) {
-      align-items: flex-start;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-  }
 
-  h1 {
-    text-align: center;
-    margin-bottom: 2rem;
+    .title-cta-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-    @include media-breakpoint-up(md) {
-      text-align: start;
+        @include media-breakpoint-up(md) {
+            align-items: flex-start;
+        }
     }
-  }
+
+    h1 {
+        text-align: center;
+        // margin-bottom: 1rem;
+
+        @include media-breakpoint-up(md) {
+            text-align: start;
+        }
+    }
+
+    h2 {
+        font-size: 1rem;
+        margin-bottom: 2rem;
+
+        @include media-breakpoint-up(md) {
+            font-size: 1.5rem;
+        }
+    }
 }
