--- a/src/views/modules/footer.twig
+++ b/src/views/modules/footer.twig
@@ -1,17 +1,19 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-2">
         <div class="icon-wrapper">
           <img src="/images/logo-alertas.png" alt="">
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-8">
         <p>Buenos Aires, Argentina</p>
-        <p>+54 9 11 3581-5718 | +54 9 11 3580-5780</p>
+        <p><strong>Líneas telefónicas: </strong>+54 9 11 3581-5718 | +54 9 11 3580-5780</p>
+        <p><strong>Líneas exclusiva WhatsApp: </strong>+54 9 11 3560-5012</p>
+        <p><strong>Tel/Fax: </strong>+54 11 4921 0568</p>
         <p>Copyright © 2022 Alertas Seguridad Privada - All Rights Reserved.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-2">
         <div class="redes-sociales">
           <div class="redes-sociales-wrapper">
             <a href="#">
