--- a/src/views/modules/trabajar-en-alertas.twig
+++ b/src/views/modules/trabajar-en-alertas.twig
@@ -3,6 +3,6 @@
     <img src="/images/logo-alertas-2.png" alt="">
     <h3>¿Querés trabajar con Alertas Seguridad Privada?</h3>
     <p>Completá el formulario de R.R.H.H.</p>
-    <a class="alertas-btn-secondary" href="/contacto">CONTACTAR</a>
+    <a class="alertas-btn-secondary" href="/rrhh">CONTACTAR</a>
   </div>
 </section>
