--- a/src/views/rrhh.twig
+++ b/src/views/rrhh.twig
@@ -42,9 +42,9 @@
         <input type="file" class="form-control" id="inputCV">
       </div>
       <div class="col-md-6">
-        <label for="inputCotizacion" class="form-label">Como nos conociste</label>
-        <select class="form-select" id="inputCotizacion">
-          {# <option selected>Cotización</option> #}
+        <label for="inputComoNosConociste" class="form-label">¿Cómo nos conociste?</label>
+        <select class="form-select" id="inputComoNosConociste">
+          <option selected disabled value="">Elegí una opción</option>
           <option value="internet">Internet</option>
           <option value="recomendado">Recomendado</option>
           <option value="publicidad">Publicidad</option>
