--- a/src/scss/modules/servicio.scss
+++ b/src/scss/modules/servicio.scss
@@ -33,7 +33,11 @@
     &__text {
         text-align: center;
 
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
+
+        &:last-of-type {
+            margin-bottom: 3rem;
+        }
     }
 
     .accordion-button {
@@ -65,7 +69,12 @@
             img {
                 display: block;
 
+                // margin: 0 auto;
+
                 width: 100%;
+                height: 400px;
+
+                object-fit: cover;
             }
         }
     }
