--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11228,7 +11228,22 @@ p {
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
   color: #37383a;
-  letter-spacing: 1px;
+  letter-spacing: 1.2px;
+}
+
+.btn-whatsapp {
+  position: fixed;
+  border: none;
+  background: none;
+  bottom: 5%;
+  right: 5%;
+}
+.btn-whatsapp img {
+  width: 5rem;
+}
+
+a {
+  letter-spacing: 1.4px;
 }
 
 .alertas-btn-primary {
