--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -50,5 +50,9 @@
 
   {% include "./modules/trabajar-en-alertas.twig" %}
 
+  <a class="btn-whatsapp" href="https://wa.me/5491135605012">
+    <img src="/images/icon-whatsapp.png" alt="">
+  </a>
+
   {% include "./modules/footer.twig" %}
 {% endblock %}
