--- a/src/views/nosotros.twig
+++ b/src/views/nosotros.twig
@@ -32,4 +32,8 @@
   </section>
 
   {% include "./modules/footer.twig" %}
+
+  <a class="btn-whatsapp" href="https://wa.me/5491135605012">
+    <img src="/images/icon-whatsapp.png" alt="">
+  </a>
 {% endblock %}
