add font in the head

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
 @import "./modules/mixins.scss";
 
 // Fonts
-@import "./modules/fonts";
+// @import "./modules/fonts";
 
 // Bootstrap
 @import "./modules/bootstrap.scss";
