--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -7,6 +7,10 @@
     <title>{{ title }}</title>
     <link rel="icon" href="/images/logo-alertas.webp">
     <meta name="description" content="{{ metaDescription }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    </head>
     <link rel='stylesheet' href='/stylesheets/main.css' />
     <link rel='stylesheet' href='/stylesheets/splide.min.css' />
   </head>
